minor fix sticky block on mobile

--- a/src/sass/blog-page/_article-page.scss
+++ b/src/sass/blog-page/_article-page.scss
@@ -90,7 +90,7 @@
 
 .write-us-block {
 	&.sticky-top {
-		position: inherit;
+		position: static;
 		@media (min-width: 1024px) {
 			position: sticky;
 			top: 30px;
